--- a/voc.html
+++ b/voc.html
@@ -1,1 +1,76 @@
-<!DOCTYPE html><html><head><title>Moon VOC Calendar</title></head><body><h1>Moon Void-of-Course Calendar</h1><div id='voc-table'></div><script src='voc.js'></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="robots" content="noindex, nofollow" />
+  <title>SEERS' VOC – Void of Course Moon (2025–2035)</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <header class="header">
+    <div class="wrap header-row">
+      <img src="seers-logo.png" class="logo" alt="SEERS logo"/>
+      <div class="title-block">
+        <h1>SEERS' VOC</h1>
+        <div class="tag">Void‑of‑Course Moon · Local times auto‑converted</div>
+      </div>
+      <nav class="nav">
+        <a href="index.html" class="badge">← Forecast</a>
+      </nav>
+    </div>
+  </header>
+
+  <main class="wrap">
+    <section class="card">
+      <details open>
+        <summary><strong>About & Instructions</strong></summary>
+        <p class="small">VOC is the period between the Moon’s last major aspect in a sign and its entry into the next sign. Best for wrap‑ups, review, and rest — not for launches.</p>
+        <details>
+          <summary>Read more</summary>
+          <ul class="small">
+            <li>Times are saved in <strong>UTC</strong> and converted to your local timezone.</li>
+            <li>Use the year bar (2025–2035). Data loads on demand.</li>
+          </ul>
+        </details>
+      </details>
+    </section>
+
+    <section class="card">
+      <div id="year-bar" class="yearbar"></div>
+      <div class="filterrow">
+        <label>Month:
+          <select id="month">
+            <option value="">All</option>
+            <option value="0">Jan</option><option value="1">Feb</option><option value="2">Mar</option>
+            <option value="3">Apr</option><option value="4">May</option><option value="5">Jun</option>
+            <option value="6">Jul</option><option value="7">Aug</option><option value="8">Sep</option>
+            <option value="9">Oct</option><option value="10">Nov</option><option value="11">Dec</option>
+          </select>
+        </label>
+        <input id="search" class="search" placeholder="Search signs or notes…" />
+        <button id="todayBtn" class="badge">Jump to Today</button>
+      </div>
+
+      <div class="tablewrap">
+        <table class="table" id="voctable">
+          <thead><tr>
+            <th>Date</th><th>Start (Local)</th><th>End (Local)</th>
+            <th>Start Sign</th><th>End Sign</th><th>Best Use</th>
+          </tr></thead>
+          <tbody id="voctbody">
+            <tr><td colspan="6" style="text-align:center;opacity:.7">Select a year (2025–2035). If nothing shows, upload <code>data/voc-YYYY.json</code> to your repo.</td></tr>
+          </tbody>
+        </table>
+      </div>
+    </section>
+  </main>
+
+  <footer class="footer">
+    <div>© 2025 SEERS' HOURLY FORECAST · All Rights Reserved</div>
+    <div>Disclaimer: SEERS' HOURLY FORECAST is for entertainment purposes only.</div>
+  </footer>
+
+  <script src="voc.js"></script>
+</body>
+</html>
